--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,6 @@ dotnet_diagnostic.CS8618.severity = none
 
 # CS8604: Possível argumento de referência nula.
 dotnet_diagnostic.CS8604.severity = none
+
+# CS8603: Possível retorno de referência nula.
+dotnet_diagnostic.CS8603.severity = silent
